--- a/index.html
+++ b/index.html
@@ -968,16 +968,10 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			    <img src="assets/liqing.jpg" class="media-object" style="width:128px;height:128px;">
 			</a>
 			<div class="media-body">			
-			<h4>Qing Li &ensp;(李庆)</h4>
-			Master in Electronic Engineering, University of Science and Technology of China (USTC)<br>
-			Visiting student in Multimedia Lab, NTU, Singapore <br>
-			<i>sealq at outlook.com</i> <br>
-			<a href="https://scholar.google.com.hk/citations?user=xqsfflMAAAAJ&hl=en">Google Scholar</a>
-			 
-		 </div></div>
-		 
-
-		 
+			<h4>Yandong Li &ensp;(李延东)</h4>
+			Ph.D. in Computer Science, University of Central Florida (UCF)<br>
+			<i>lyndon.leeseu at outlook.com</i> <br>		 
+		 </div></div> 
 		 
 		 <a id="Education"></a>
 		 <hr>
@@ -986,9 +980,9 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<h4>Education</h4>
 				<ul>
 				<li>
-				<h5><i>2015.08 - present</i></h5>
-				Master in Electronic Engineering, University of Science and Technology of China (USTC), Hefei, China<br>
-				Co-advised by <a href="http://www.cs.rochester.edu/u/jluo/">Prof. Jiebo Luo</a> in USTC and <a href="https://www.microsoft.com/en-us/research/people/tmei/">Dr. Tao Mei</a> in Microsoft Research Asia. 
+				<h5><i>2017.08 - present</i></h5>
+				Ph.D. in Computer Science, University of Central Florida (UCF), Orlando, USA<br>
+				advised by <a href="http://www.cs.rochester.edu/u/jluo/">Prof. Jiebo Luo</a> in USTC and <a href="https://www.microsoft.com/en-us/research/people/tmei/">Dr. Tao Mei</a> in Microsoft Research Asia. 
 				</li>
 				
 				<li>
