--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			<div class="media-body">			
 			<h4>Yandong Li &ensp;(李延东)</h4>
 			Ph.D. in Computer Science, University of Central Florida (UCF)<br>
-			<i>lyndon.leeseu at outlook.com</i> <br>		 
+			<i>lyndon.leeseu@outlook.com</i> <br>		 
 		 </div></div> 
 		 
 		 <a id="Education"></a>
