--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 	 
 	  	  <div class="media">
 		    <a class="pull-left">
-			    <img src="assets/liqing.jpg" class="media-object" style="width:128px;height:128px;">
+			    <img src="assets/download.png" class="media-object" style="width:128px;height:128px;">
 			</a>
 			<div class="media-body">			
 			<h4>Yandong Li &ensp;(李延东)</h4>
@@ -982,14 +982,14 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<li>
 				<h5><i>2017.08 - present</i></h5>
 				Ph.D. in Computer Science, University of Central Florida (UCF), Orlando, USA<br>
-				advised by <a href="http://www.cs.rochester.edu/u/jluo/">Prof. Jiebo Luo</a> in USTC and <a href="https://www.microsoft.com/en-us/research/people/tmei/">Dr. Tao Mei</a> in Microsoft Research Asia. 
+				advised by <a href="http://boqinggong.info/index.html">Prof. Boqing Gong</a> in Tencent AI Lab and <a href="http://www.cs.ucf.edu/~lwang/">Prof. Liqiang Wang</a> in UCF. 
 				</li>
 				
 				<li>
-				<h5><i>2011.09 - 2015.07</i></h5>
-				Bachelor in Automation, University of Science and Technology of China (USTC), Hefei, China<br>
-				GPA: 3.93/4.3 (92/100) &emsp;<b>Rank: 1/82</b> <br>
-				Awarded the <b><i>Guo Moruo</i></b> Scholarship, for the best graduate in Department of Automation.
+				<h5><i>2012.09 - 2016.07</i></h5>
+				Bachelor in Computer Software Engineering, Southeast University (SEU), Nanjing, China<br>
+				GPA: 3.70/4.0 &emsp;<b>Rank: 3/139</b> <br>
+				Awarded the <b><i>Outstanding Undergraduate Student</i></b> and <b><i>National Scholarship</i></b> 
 				</li>
 				</ul>
 		 </div>
@@ -1002,28 +1002,16 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<h4>Awards</h4>
 				<ul>
 				<li>
-				National Scholarship, awarded to top 1% graduates, 2017.
+				1st Prize on <a href="http://activity-net.org/challenges/2017/">ActivityNet Kinetics Challenge  @CVPR’17</a>, 2015.
 				</li>
 				<li>
-				ICMR’16 Student Travel Grants, awarded to 12 Ph.D. students in the world, 2016.
+				3rd Prize on <a href="https://research.google.com/youtube8m/">Google Cloud and YouTube-8M Video Understanding Challenge  @CVPR’17</a>, 2017.
 				</li>
 				<li>
-				Best Paper Finalist in ICMR'16, awarded to 4 papers from over 230 submissions, 2016.
+				Outstanding Undergraduates of Southeast University, awarded to top 1% undergraduates, 2016.
 				</li>
 				<li>
-				2nd Prize on <a href="http://www.thumos.info/results.html">THUMOS Action Classification Challenge  @CVPR’15</a>, 2015.
-				</li>
-				<li>
-				Outstanding Graduate in Anhui Province, China, awarded to top 1% graduates, 2015.
-				</li>
-				<li>
-				<b><i>Guo Moruo</i></b> Scholarship (<b>郭沫若奖学金</b>), awarded to the <b>best graduate </b> of the department, 2014.
-				</li>
-				<li>
-				National Scholarship, awarded to top 1% undergraduates, 2013.
-				</li>
-				<li>
-				Outstanding Student Scholarship, awarded to top 1% undergraduates, 2012.
+				National Scholarship, awarded to top 3% undergraduates, 2015.
 				</li>
 				</ul>
 		 </div>
