--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 	 
 	  	  <div class="media">
 		    <a class="pull-left">
-			    <img src="assets/download.png" class="media-object" style="width:128px;height:160px;">
+			    <img src="assets/download.png" class="media-object" style="width:128px;height:170px;">
 			</a>
 			<div class="media-body">			
 			<h4>Yandong Li &ensp;(李延东)</h4>
@@ -1024,8 +1024,8 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 <div class="row">	
 		 <div class="span">
 				<h4>Research Experiences</h4>
+			        My research interests are in the areas of machine learning and computer vision.  Specifically, I have somepractical experience on large scale video analysis and vision-language embedding area like visual questionanswering.  Before I came to US, I have worked in Microsoft Research Asia and Baidu Institute of DeepLearning, our team won the 1st place for ActivityNet kinetics challenges and 3rd place for google cloud andYoutube-8m large scale video understanding challenges which are golden competitions in action recognition area.More recently, I explore the reinforcement learning for sequential model on video summarization.
 				<ul>
-				
 				<li>
 				<h5>University of Central Florida (UCF),  <a href="http://crcv.ucf.edu/"></a>, Center for Research in Computer Vision<i>2017.08 - present</i></h5>
 				Reinforcing sequential DPP For Video Summarization, supervised by Dr. Boqing Gong<br>
@@ -1043,8 +1043,8 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<h5>Microsoft Research Asia, <a href="https://www.microsoft.com/en-us/research/group/multimedia-search-and-mining/">Multimedia Search and Mining Group</a>, <i>2016.07 - 2017.02</i></h5>
 				Research on cross-modality hashing and video thumbnail tools, mentored by Dr. Ting Yao and Dr. Tao Mei <br>
 				<ul>
-					<li>Video Thumbnail Tools:Take part into the development of Microsoft Cognitive Service</li>
-					<li>Hashing:Deep cross-modal hashing won the outstanding dissertation for bachelor’s degree</li>
+					<li>Video Thumbnail Tools: Take part into the development of Microsoft Cognitive Service</li>
+					<li>Hashing: Deep cross-modal hashing won the outstanding dissertation for bachelor’s degree</li>
 				</ul>
 
 				</ul>
