--- a/index.html
+++ b/index.html
@@ -1024,10 +1024,10 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 <div class="row">	
 		 <div class="span">
 				<h4>Research Experiences</h4>
-			        My research interests are in the areas of machine learning and computer vision.  Specifically, I have somepractical experience on large scale video analysis and vision-language embedding area like visual questionanswering.  Before I came to US, I have worked in Microsoft Research Asia and Baidu Institute of DeepLearning, our team won the 1st place for ActivityNet kinetics challenges and 3rd place for google cloud andYoutube-8m large scale video understanding challenges which are golden competitions in action recognition area.More recently, I explore the reinforcement learning for sequential model on video summarization.
+			        My research interests are in the areas of machine learning and computer vision. Specifically, I have some practical experience on large scale video analysis and vision-language embedding area like visual question answering. Before I came to US, I have worked in Microsoft Research Asia and Baidu Institute of Deep Learning, our team won the 1st place for ActivityNet kinetics challenges and 3rd place for google cloud andYoutube-8m large scale video understanding challenges which are golden competitions in action recognition area. More recently, I explore the reinforcement learning for sequential model on video summarization.
 				<ul>
 				<li>
-				<h5>University of Central Florida (UCF),  <a href="http://crcv.ucf.edu/"></a>, Center for Research in Computer Vision<i>2017.08 - present</i></h5>
+				<h5>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a>, <i>2017.08 - present</i></h5>
 				Reinforcing sequential DPP For Video Summarization, supervised by Dr. Boqing Gong<br>
 				</li>
 				
