--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class="gr__vireo_cs_cityu_edu_hk"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Qing Li</title>
+	<title>Yandong Li</title>
 
     <!-- Le styles -->
     <link href="assets/bootstrap.css" rel="stylesheet">
