--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 					Our team won the 3rd place in the Google Cloud and YouTube-8M Video Understanding Challenge. Our best single model achieves 82.75% in term of GAP@20 on the Kaggle Public test set<br><br>
                 </li>
 				
-				<li>VQS: Linking Segmentations to Questions and Answers for Supervised Attention in VQA and Question-Focused Semantic Segmentation <a target="_blank" href="http://storage.googleapis.com/www.thumos.info/thumos15_notebooks/TH15_MSRAsia.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
+				<li>VQS: Linking Segmentations to Questions and Answers for Supervised Attention in VQA and Question-Focused Semantic Segmentation <a target="_blank" href="https://arxiv.org/abs/1708.04686"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
                    			Chuang Gan, <i><b>Yandong Li</b></i>, Haoxiang Li, Chen Sun, Boqing Gong. (ICCV'17), December, 2017 <br>
 					We present the preliminary work of linking the instance segmentations provided by COCO to the questions 
 					and answers (QAs) in the VQA dataset, and name the collected links as VQS. They transfer human supervision 
