--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 					</li>
 				
 				<li>Revisiting the Efectiveness of Off-the-shelf Temporal Modeling Approaches for Large-scale Video Classification <a target="_blank" href="https://arxiv.org/abs/1708.03805"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
-                    Yunlong Bian, Chuang Gan , Xiao Liu, Fu Li, Xiang Long, <i><b>Yandong Li</b></i>, Heng Qi, Jie Zhou, Shilei Wen, Yuanqing Lin. (CVPR'17 WORKSHOP), August 2017. <br>
+                    Yunlong Bian, Chuang Gan , Xiao Liu, Fu Li, Xiang Long, <i><b>Yandong Li</b></i>, Heng Qi, Jie Zhou, Shilei Wen, Yuanqing Lin. (CVPR'17 WORKSHOP), Hawaii, USA Aug 2017. <br>
 					Our team won the 1st place in the ActivityNet Kinetics Challenge.  Our best single model achieves 77.7% in term of top-1 accuracy and 93.2% in term of top-5 accuracy on the validation set
 					<br><br>
                 </li>
