--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
                 </li>
 				
 				<li>VQS: Linking Segmentations to Questions and Answers for Supervised Attention in VQA and Question-Focused Semantic Segmentation <a target="_blank" href="https://arxiv.org/abs/1708.04686"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
-                   			Chuang Gan, <i><b>Yandong Li</b></i>, Haoxiang Li, Chen Sun, Boqing Gong. (ICCV'17), Venice, Italy Oct, 2017 <br>
+                   			Chuang Gan, <i><b>Yandong Li</b></i>, Haoxiang Li, Chen Sun, Boqing Gong. (ICCV'17), Venice, Italy Oct 2017 <br>
 					We present the preliminary work of linking the instance segmentations provided by COCO to the questions 
 					and answers (QAs) in the VQA dataset, and name the collected links as VQS. They transfer human supervision 
 					between the previously separate tasks, offer more effective leverage to existing problems, and also open the 
