--- a/index.html
+++ b/index.html
@@ -971,7 +971,8 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			<h4>Yandong Li &ensp;(李延东)</h4>
 			Ph.D. in Computer Science, University of Central Florida (UCF)<br>
 			Center for Research in Computer Vision (CRCV)<br>
-			<i>lyndon.leeseu@outlook.com</i> <br>		 
+			<i>lyndon.leeseu@outlook.com</i> <br>
+			<a href="https://scholar.google.com/citations?user=kRLb6PkAAAAJ&hl=en">Google Scholar</a>
 		 </div></div> 
 		 
 		 <a id="Education"></a>
