--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<li>
 				<h5><i>2017.08 - present</i></h5>
 				Ph.D. in Computer Science, University of Central Florida (UCF), Orlando, USA<br>
-				advised by <a href="http://boqinggong.info/index.html">Dr. Boqing Gong</a> in Tencent AI Lab and <a href="http://www.cs.ucf.edu/~lwang/">Prof. Liqiang Wang</a> in UCF. 
+				advised by <a href="http://www.cs.ucf.edu/~lwang/">Prof. Liqiang Wang</a> in UCF and <a href="http://boqinggong.info/index.html">Dr. Boqing Gong</a> in Google Research . 
 				</li>
 				
 				<li>
@@ -1018,7 +1018,8 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				</ul>
 		 </div>
 		 </div>
-		 
+			  
+	
 		 
 		 <a id="Research_Experiences"></a>
 		 <hr>
