--- a/index.html
+++ b/index.html
@@ -950,7 +950,9 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
               <ul class="nav">
                 <li><a href="#">Home</a></li>
 				<li><a href="#Education">Education</a></li>
-				<li><a href="#Awards">Awards</a></li>            
+				<li><a href="#Awards">Awards</a></li>         
+		      		<li><a href="#Awards1">Awards1</a></li>  
+		      		<li><a href="#Awards2">Awards2</a></li>   
               </ul>
             </div>
           </div>
@@ -997,6 +999,52 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 </div>
 		 
 		 <a id="Awards"></a>
+		 <hr>
+		 <div class="row">	
+		 <div class="span">
+				<h4>Awards</h4>
+				<ul>
+				<li>
+				1st Prize on <a href="http://activity-net.org/challenges/2017/">ActivityNet Kinetics Challenge  @CVPR’17</a>, 2017.
+				</li>
+				<li>
+				3rd Prize on <a href="https://research.google.com/youtube8m/">Google Cloud and YouTube-8M Video Understanding Challenge  @CVPR’17</a>, 2017.
+				</li>
+				<li>
+				Outstanding Undergraduates of Southeast University, awarded to top 1% undergraduates, 2016.
+				</li>
+				<li>
+				National Scholarship, awarded to top 3% undergraduates, 2015.
+				</li>
+				</ul>
+	         </hr>
+		 </div>
+		 </div>
+	   	
+	  	<a id="Awards1"></a>
+		 <hr>
+		 <div class="row">	
+		 <div class="span">
+				<h4>Awards</h4>
+				<ul>
+				<li>
+				1st Prize on <a href="http://activity-net.org/challenges/2017/">ActivityNet Kinetics Challenge  @CVPR’17</a>, 2017.
+				</li>
+				<li>
+				3rd Prize on <a href="https://research.google.com/youtube8m/">Google Cloud and YouTube-8M Video Understanding Challenge  @CVPR’17</a>, 2017.
+				</li>
+				<li>
+				Outstanding Undergraduates of Southeast University, awarded to top 1% undergraduates, 2016.
+				</li>
+				<li>
+				National Scholarship, awarded to top 3% undergraduates, 2015.
+				</li>
+				</ul>
+	         </hr>
+		 </div>
+		 </div>
+	
+		<a id="Awards2"></a>
 		 <hr>
 		 <div class="row">	
 		 <div class="span">
