--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 <hr>
 		 <div class="row">	
 		 <div class="span">
-				<h4>Awards</h4>
+				<h4>Awards1</h4>
 				<ul>
 				<li>
 				1st Prize on <a href="http://activity-net.org/challenges/2017/">ActivityNet Kinetics Challenge  @CVPR’17</a>, 2017.
@@ -1048,7 +1048,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 <hr>
 		 <div class="row">	
 		 <div class="span">
-				<h4>Awards</h4>
+				<h4>Awards2</h4>
 				<ul>
 				<li>
 				1st Prize on <a href="http://activity-net.org/challenges/2017/">ActivityNet Kinetics Challenge  @CVPR’17</a>, 2017.
