--- a/index.html
+++ b/index.html
@@ -951,8 +951,9 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
                 <li><a href="#">Home</a></li>
 				<li><a href="#Education">Education</a></li>
 				<li><a href="#Awards">Awards</a></li>
+		      		<li><a href="#Awards1">Awards1</a></li>
 				<li><a href="#Research_Experiences">Research Experiences</a></li>
-                <li><a href="#Publications">Publications</a></li>                
+                		<li><a href="#Publications">Publications</a></li>                
               </ul>
             </div>
           </div>
@@ -1002,6 +1003,28 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 <div class="row">	
 		 <div class="span">
 				<h4>Awards</h4>
+				<ul>
+				<li>
+				1st Prize on <a href="http://activity-net.org/challenges/2017/">ActivityNet Kinetics Challenge  @CVPR’17</a>, 2017.
+				</li>
+				<li>
+				3rd Prize on <a href="https://research.google.com/youtube8m/">Google Cloud and YouTube-8M Video Understanding Challenge  @CVPR’17</a>, 2017.
+				</li>
+				<li>
+				Outstanding Undergraduates of Southeast University, awarded to top 1% undergraduates, 2016.
+				</li>
+				<li>
+				National Scholarship, awarded to top 3% undergraduates, 2015.
+				</li>
+				</ul>
+		 </div>
+		 </div>
+			  
+		 <a id="Awards1"></a>
+		 <hr>
+		 <div class="row">	
+		 <div class="span">
+				<h4>Awards1</h4>
 				<ul>
 				<li>
 				1st Prize on <a href="http://activity-net.org/challenges/2017/">ActivityNet Kinetics Challenge  @CVPR’17</a>, 2017.
