--- a/index.html
+++ b/index.html
@@ -950,8 +950,8 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
               <ul class="nav">
                 <li><a href="#">Home</a></li>
 				<li><a href="#Education">Education</a></li>
-				<li><a href="#Awards">Awards</a></li>
 		      		<li><a href="#Research_Experiences">Research Experiences</a></li>
+				<li><a href="#Awards">Awards</a></li>
                 		<li><a href="#Publications">Publications</a></li>                
               </ul>
             </div>
@@ -984,7 +984,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<li>
 				<h5><i>2017.08 - present</i></h5>
 				Ph.D. in Computer Science, University of Central Florida (UCF), Orlando, USA<br>
-				advised by <a href="http://www.cs.ucf.edu/~lwang/">Prof. Liqiang Wang</a> at UCF and <a href="http://boqinggong.info/index.html">Dr. Boqing Gong</a>(remote) at Google Research . 
+				advised by <a href="http://www.cs.ucf.edu/~lwang/">Prof. Liqiang Wang</a> at UCF and <a href="http://boqinggong.info/index.html">Dr. Boqing Gong</a> (remote) at Google Research. 
 				</li>
 				
 				<li>
@@ -1010,12 +1010,32 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<li>
 				<h5>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a>, <i>2017.08 - present</i></h5>
 				Machine learning and computer vision, supervised by Dr.s Liqiang Wang and Boqing Gong<br>
-				</li>
-					
+				</li>	
 				<li>
-				<h5>Google Cloud&&AI,  <i>2019.09 - 2019-12</i></h5>
+				<h5>Google Research,  <i>2020.01 - present</i></h5>
+				Self-supervised learning<br>
+				</li>		
+				<li>
+				<h5>Google Cloud&&AI, Sunnyvale, USA <i>2019.09 - 2019-12</i></h5>
 				Object Detection: Improving object detection with selective self-supervised self-training<br>
+				</li>	
+				<li>
+				<h5>Microsoft Cloud&&AI, Seattle, USA <i>2019.5 - 2019-8</i></h5>
+				Generative model: High-resolution image generation<br>
 				</li>
+				<li>
+				<h5>IBM Thomas J. Watson Research Center, New York, USA <i>2018.5 - 2018-8</i></h5>
+				Multi-task learning<br>
+				</li>
+				<li>
+				<h5>Baidu Institute of Deep Learning (IDL),  <i>2017.2 - 2017-8</i></h5>
+				Action Recognition: Our team won the 3rd place in Youtube-8M competition and 1st place in ActivityNetchallenge which are prestigious competitions for action recognition<br>
+				</li>
+				<li>
+				<h5>Microsoft Reseach Asia (MSRA),  <i>2015.8 - 2016-7</i></h5>
+				Video Thumbnail Tools: I have taken part in the development of Microsoft Cognitive Service.<br>
+				Hashing: Deep cross-modal hashing won the outstanding dissertation for a Bachelor’s degree.
+				</li>	
 				</ul>
 		 </div>
 		 </div>
