--- a/index.html
+++ b/index.html
@@ -1009,31 +1009,31 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			 	networks, multi-task learning, visual question answering and segmentation, action recognition, and video summarization.
 				<ul>
 				<li>
-				<h5>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a>, <i>2017.08 - present</i></h5>
+				<h5>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a>, Orlando, USA &emsp&emsp<i>2017.08 - present</i></h5>
 				Machine learning and computer vision, supervised by Dr.s Liqiang Wang and Boqing Gong<br>
 				</li>	
 				<li>
-				<h5>Google Research,  <i>2020.01 - present</i></h5>
-				Self-supervised learning<br>
+				<h5>Google Research, Seattle, USA &emsp&emsp<i>2020.01 - present</i></h5>
+				Self-supervised learning
 				</li>		
 				<li>
-				<h5>Google Cloud&&AI, Sunnyvale, USA <i>2019.09 - 2019-12</i></h5>
-				Object Detection: Improving object detection with selective self-supervised self-training<br>
+				<h5>Google Cloud&&AI, Sunnyvale, USA &emsp&emsp<i>2019.09 - 2019-12</i></h5>
+				Object Detection: Improving object detection with selective self-supervised self-training
 				</li>	
 				<li>
-				<h5>Microsoft Cloud&&AI, Seattle, USA <i>2019.5 - 2019-8</i></h5>
-				Generative model: High-resolution image generation<br>
+				<h5>Microsoft Cloud&&AI, Seattle, USA &emsp&emsp<i>2019.5 - 2019-8</i></h5>
+				Generative model: High-resolution image generation
 				</li>
 				<li>
-				<h5>IBM Thomas J. Watson Research Center, New York, USA <i>2018.5 - 2018-8</i></h5>
-				Multi-task learning<br>
+				<h5>IBM Thomas J. Watson Research Center, New York, USA &emsp&emsp<i>2018.5 - 2018-8</i></h5>
+				Multi-task learning
 				</li>
 				<li>
-				<h5>Baidu Institute of Deep Learning (IDL),  <i>2017.2 - 2017-8</i></h5>
-				Action Recognition: Our team won the 3rd place in Youtube-8M competition and 1st place in ActivityNetchallenge which are prestigious competitions for action recognition<br>
+				<h5>Baidu Institute of Deep Learning (IDL), Beijing, China  &emsp&emsp<i>2017.2 - 2017-8</i></h5>
+				Action Recognition: Our team won the 3rd place in Youtube-8M competition and 1st place in ActivityNetchallenge which are prestigious competitions for action recognition
 				</li>
 				<li>
-				<h5>Microsoft Reseach Asia (MSRA),  <i>2015.8 - 2016-7</i></h5>
+				<h5>Microsoft Reseach Asia (MSRA), Beijing, China &emsp&emsp<i>2015.8 - 2016-7</i></h5>
 				Video Thumbnail Tools: I have taken part in the development of Microsoft Cognitive Service.<br>
 				Hashing: Deep cross-modal hashing won the outstanding dissertation for a Bachelor’s degree.
 				</li>	
