--- a/index.html
+++ b/index.html
@@ -1009,31 +1009,31 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			 	networks, multi-task learning, visual question answering and segmentation, action recognition, and video summarization.
 				<ul>
 				<li>
-				<h5>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a>, Orlando, USA &emsp&emsp<i>2017.08 - present</i></h5>
+				<h5>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a>, Orlando, USA &emsp;<i>2017.08 - present</i></h5>
 				Machine learning and computer vision, supervised by Dr.s Liqiang Wang and Boqing Gong<br>
 				</li>	
 				<li>
-				<h5>Google Research, Seattle, USA &emsp&emsp<i>2020.01 - present</i></h5>
+				<h5>Google Research, Seattle, USA &emsp;<i>2020.01 - present</i></h5>
 				Self-supervised learning
 				</li>		
 				<li>
-				<h5>Google Cloud&&AI, Sunnyvale, USA &emsp&emsp<i>2019.09 - 2019-12</i></h5>
+				<h5>Google Cloud&&AI, Sunnyvale, USA &emsp;<i>2019.09 - 2019-12</i></h5>
 				Object Detection: Improving object detection with selective self-supervised self-training
 				</li>	
 				<li>
-				<h5>Microsoft Cloud&&AI, Seattle, USA &emsp&emsp<i>2019.5 - 2019-8</i></h5>
+				<h5>Microsoft Cloud&&AI, Seattle, USA &emsp;<i>2019.5 - 2019-8</i></h5>
 				Generative model: High-resolution image generation
 				</li>
 				<li>
-				<h5>IBM Thomas J. Watson Research Center, New York, USA &emsp&emsp<i>2018.5 - 2018-8</i></h5>
+				<h5>IBM Thomas J. Watson Research Center, New York, USA &emsp;<i>2018.5 - 2018-8</i></h5>
 				Multi-task learning
 				</li>
 				<li>
-				<h5>Baidu Institute of Deep Learning (IDL), Beijing, China  &emsp&emsp<i>2017.2 - 2017-8</i></h5>
-				Action Recognition: Our team won the 3rd place in Youtube-8M competition and 1st place in ActivityNetchallenge which are prestigious competitions for action recognition
+				<h5>Baidu Institute of Deep Learning (IDL), Beijing, China  &emsp;<i>2017.2 - 2017-8</i></h5>
+				Action Recognition: Our team won the 3rd place in Youtube-8M competition and 1st place in ActivityNet challenge which are prestigious competitions for action recognition
 				</li>
 				<li>
-				<h5>Microsoft Reseach Asia (MSRA), Beijing, China &emsp&emsp<i>2015.8 - 2016-7</i></h5>
+				<h5>Microsoft Reseach Asia (MSRA), Beijing, China &emsp;<i>2015.8 - 2016-7</i></h5>
 				Video Thumbnail Tools: I have taken part in the development of Microsoft Cognitive Service.<br>
 				Hashing: Deep cross-modal hashing won the outstanding dissertation for a Bachelor’s degree.
 				</li>	
@@ -1047,10 +1047,18 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 <div class="span">
 				<h4>Publications</h4>
 				<ul>
-				<li>Depthwise Convolution is All You Need for Learning Multiple Visual Domains (AAAI 2019) <br>
+				<li>Neural Networks Are More Data-Efficient Teachers Than Human Raters:Active Mixup forKnowledge Distillation from a Blackbox Teacher Model (CVPR 2020 Oral)<br>
+				<i><b>Yandong Li*</b></i>, Dongdong Wang*, Liqiang Wang, Boqing Gong (* Equal Contribution)<br
+				<li>BachGAN: High-Resolution Image Synthesis from Salient Object Layout (CVPR 2020) <br>
+				<i><b>Yandong Li</b></i>, Yu Cheng, Zhe Gan, Licheng Yu, Liqiang Wang, Jingjing Liu<br>
+				<li>AdaFilter: Adaptive Filter Fine-tuning for Deep Transfer Learning (AAAI 2020) <a target="_blank" href="https://arxiv.org/pdf/1911.09659.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
+				<i><b>Yandong Li*</b></i>, Lijun Li*, Liqiang Wang, Tong Zhang, Boqing Gong (* Equal Contribution)<br>
+				<li>NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-BoxAttack on Deep Neural Networks (ICML 2019) <a target="_blank" href="https://arxiv.org/pdf/1905.00441.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
+				<i><b>Yandong Li*</b></i>, Lijun Li*, Liqiang Wang, Tong Zhang, Boqing Gong (* Equal Contribution)<br>
+				<li>Depthwise Convolution is All You Need for Learning Multiple Visual Domains (AAAI 2019) <a target="_blank" href="https://arxiv.org/pdf/1902.00927.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
 				<i><b>Yandong Li*</b></i>, Yunhui Guo*, Rogerio Feris, Liqiang Wang, Tajana Rosing (* Equal Contribution)<br>
-				<li>How Local is the Local Diversity? Reinforcing Sequential Determinantal Point Processes with Dynamic Ground Sets for Supervised Video Summarization  ECCV, 2018.<br>
-                                <i><b>Yandong Li</b></i>, Liqiang Wang, Tianbao Yang, Boqing Gong.  <br>
+				<li>How Local is the Local Diversity? Reinforcing Sequential Determinantal Point Processes with Dynamic Ground Sets for Supervised Video Summarization  (ECCV, 2018)<br>
+                                <i><b>Yandong Li</b></i>, Liqiang Wang, Tianbao Yang, Boqing Gong.<br>
 					<!--
 					We study reinforcement model on sequential DPP for video sumarization and then apply the dynamic segments selection approach into reinforcing model. The model can solve the exposure problem existing in 
 					seqDPP and capture the dynamic temporal segments at the same time. As a result, we get state-of-the-art performance on the standard video summary datasets.
@@ -1101,10 +1109,10 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<h4>Awards</h4>
 				<ul>
 				<li>
-				1st Prize on <a href="http://activity-net.org/challenges/2017/">ActivityNet Kinetics Challenge  @CVPR’17</a>, 2017.
+				1st Prize in <a href="http://activity-net.org/challenges/2017/">ActivityNet Kinetics Challenge  @CVPR’17</a>, 2017.
 				</li>
 				<li>
-				3rd Prize on <a href="https://research.google.com/youtube8m/">Google Cloud and YouTube-8M Video Understanding Challenge  @CVPR’17</a>, 2017.
+				3rd Prize in <a href="https://research.google.com/youtube8m/">Google Cloud and YouTube-8M Video Understanding Challenge  @CVPR’17</a>, 2017.
 				</li>
 				<li>
 				Outstanding Undergraduates of Southeast University, awarded to top 1% undergraduates, 2016.
