--- a/index.html
+++ b/index.html
@@ -1009,15 +1009,15 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			 	networks, multi-task learning, visual question answering and segmentation, action recognition, and video summarization.
 				<ul>
 				<li>
-				<h5>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a>, Orlando, USA &emsp;<i>2017.08 - present</i></h5>
-				Machine learning and computer vision, supervised by Dr.s Liqiang Wang and Boqing Gong<br>
+				<b>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a>, Orlando, USA &emsp;<i>2017.08 - present</i></b><br>
+				Machine learning and computer vision, supervised by Dr.s Liqiang Wang and Boqing Gong
 				</li>	
 				<li>
-				<h5>Google Research, Seattle, USA &emsp;<i>2020.01 - present</i></h5>
+				<b>Google Research, Seattle, USA &emsp;<i>2020.01 - present</i></b><br>
 				Self-supervised learning
 				</li>		
 				<li>
-				<h5>Google Cloud&&AI, Sunnyvale, USA &emsp;<i>2019.09 - 2019-12</i></h5>
+				<b>Google Cloud&&AI, Sunnyvale, USA &emsp;<i>2019.09 - 2019-12</i></b><br>
 				Object Detection: Improving object detection with selective self-supervised self-training
 				</li>	
 				<li>
