--- a/index.html
+++ b/index.html
@@ -1009,31 +1009,31 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			 	networks, multi-task learning, visual question answering and segmentation, action recognition, and video summarization.
 				<ul>
 				<li>
-				<b>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a>, Orlando, USA &emsp;<i>2017.08 - present</i></b><br>
+				<b>University of Central Florida (UCF), <a href="http://crcv.ucf.edu/">Center for Research in Computer Vision</a> &emsp; Orlando, USA &emsp;<i>2017.08 - present</i></b><br>
 				Machine learning and computer vision, supervised by Dr.s Liqiang Wang and Boqing Gong
 				</li>	
 				<li>
-				<b>Google Research, Seattle, USA &emsp;<i>2020.01 - present</i></b><br>
+				<b>Google Research, Seattle &emsp; USA &emsp;<i>2020.01 - present</i></b><br>
 				Self-supervised learning
 				</li>		
 				<li>
-				<b>Google Cloud&&AI, Sunnyvale, USA &emsp;<i>2019.09 - 2019-12</i></b><br>
+				<b>Google Cloud&&AI, Sunnyvale &emsp; USA &emsp;<i>2019.09 - 2019-12</i></b><br>
 				Object Detection: Improving object detection with selective self-supervised self-training
 				</li>	
 				<li>
-				<h5>Microsoft Cloud&&AI, Seattle, USA &emsp;<i>2019.5 - 2019-8</i></h5>
+				<b>Microsoft Cloud&&AI, Seattle &emsp; USA &emsp;<i>2019.5 - 2019-8</i></b><br>
 				Generative model: High-resolution image generation
 				</li>
 				<li>
-				<h5>IBM Thomas J. Watson Research Center, New York, USA &emsp;<i>2018.5 - 2018-8</i></h5>
+				<b>IBM Thomas J. Watson Research Center &emsp; New York, USA &emsp;<i>2018.5 - 2018-8</i></b><br>
 				Multi-task learning
 				</li>
 				<li>
-				<h5>Baidu Institute of Deep Learning (IDL), Beijing, China  &emsp;<i>2017.2 - 2017-8</i></h5>
+				<b>Baidu Institute of Deep Learning (IDL) &emsp; Beijing, China  &emsp;<i>2017.2 - 2017-8</i></b><br>
 				Action Recognition: Our team won the 3rd place in Youtube-8M competition and 1st place in ActivityNet challenge which are prestigious competitions for action recognition
 				</li>
 				<li>
-				<h5>Microsoft Reseach Asia (MSRA), Beijing, China &emsp;<i>2015.8 - 2016-7</i></h5>
+				<b>Microsoft Reseach Asia (MSRA) &emsp; Beijing, China &emsp;<i>2015.8 - 2016-7</i></b><br>
 				Video Thumbnail Tools: I have taken part in the development of Microsoft Cognitive Service.<br>
 				Hashing: Deep cross-modal hashing won the outstanding dissertation for a Bachelor’s degree.
 				</li>	
@@ -1052,7 +1052,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<li>BachGAN: High-Resolution Image Synthesis from Salient Object Layout (CVPR 2020) <br>
 				<i><b>Yandong Li</b></i>, Yu Cheng, Zhe Gan, Licheng Yu, Liqiang Wang, Jingjing Liu<br><br>
 				<li>AdaFilter: Adaptive Filter Fine-tuning for Deep Transfer Learning (AAAI 2020) <a target="_blank" href="https://arxiv.org/pdf/1911.09659.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
-				<i><b>Yandong Li*</b></i>, Lijun Li*, Liqiang Wang, Tong Zhang, Boqing Gong <br><br>
+				Yunhui Guo, <i><b>Yandong Li</b></i>, Liqiang Wang, Tajana Rosing <br><br>
 				<li>NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-BoxAttack on Deep Neural Networks (ICML 2019) <a target="_blank" href="https://arxiv.org/pdf/1905.00441.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
 				<i><b>Yandong Li*</b></i>, Lijun Li*, Liqiang Wang, Tong Zhang, Boqing Gong (* Equal Contribution)<br><br>
 				<li>Depthwise Convolution is All You Need for Learning Multiple Visual Domains (AAAI 2019) <a target="_blank" href="https://arxiv.org/pdf/1902.00927.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
