--- a/index.html
+++ b/index.html
@@ -974,6 +974,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			Center for Research in Computer Vision (CRCV)<br>
 			<i>lyndon.leeseu@outlook.com</i> <br>
 			<a href="https://scholar.google.com/citations?user=kRLb6PkAAAAJ&hl=en">Google Scholar</a>
+			<a href="https://cold-winter.github.io/CV_yandong.pdf">CV</a>
 		 </div></div> 
 		 
 		 <a id="Education"></a>
@@ -1051,15 +1052,15 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<i><b>Yandong Li*</b></i>, Dongdong Wang*, Liqiang Wang, Boqing Gong (* Equal Contribution)<br><br>
 				<li>BachGAN: High-Resolution Image Synthesis from Salient Object Layout &emsp;<i><b>CVPR 2020</b></i><br>
 				<i><b>Yandong Li</b></i>, Yu Cheng, Zhe Gan, Licheng Yu, Liqiang Wang, Jingjing Liu<br><br>
-				<li>Robust graph neural network against poisoning attacks via transfer learning &emsp;<i><b>WSDM 2020</b></i> <a target="_blank" href="https://arxiv.org/pdf/1908.07558.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
+				<li>Robust graph neural network against poisoning attacks via transfer learning <a target="_blank" href="https://arxiv.org/pdf/1908.07558.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a>&emsp;<i><b>WSDM 2020</b></i> <br>
 				Xianfeng Tang, <i><b>Yandong Li</b></i>, Yiwei Sun, Huaxiu Yao, Prasenjit Mitra, Suhang Wang<br><br>
-				<li>AdaFilter: Adaptive Filter Fine-tuning for Deep Transfer Learning &emsp;<i><b>AAAI 2020</b></i> <a target="_blank" href="https://arxiv.org/pdf/1911.09659.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
+				<li>AdaFilter: Adaptive Filter Fine-tuning for Deep Transfer Learning <a target="_blank" href="https://arxiv.org/pdf/1911.09659.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a> &emsp;<i><b>AAAI 2020</b></i> <br>
 				Yunhui Guo, <i><b>Yandong Li</b></i>, Liqiang Wang, Tajana Rosing <br><br>
-				<li>NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-BoxAttack on Deep Neural Networks &emsp;<i><b>ICML 2019</b></i> <a target="_blank" href="https://arxiv.org/pdf/1905.00441.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
+				<li>NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-BoxAttack on Deep Neural Networks <a target="_blank" href="https://arxiv.org/pdf/1905.00441.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a> &emsp;<i><b>ICML 2019</b></i> <br>
 				<i><b>Yandong Li*</b></i>, Lijun Li*, Liqiang Wang, Tong Zhang, Boqing Gong (* Equal Contribution)<br><br>
-				<li>Depthwise Convolution is All You Need for Learning Multiple Visual Domains &emsp;<i><b>AAAI 2019</b></i> <a target="_blank" href="https://arxiv.org/pdf/1902.00927.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
+				<li>Depthwise Convolution is All You Need for Learning Multiple Visual Domains <a target="_blank" href="https://arxiv.org/pdf/1902.00927.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a> &emsp;<i><b>AAAI 2019</b></i> <br>
 				<i><b>Yandong Li*</b></i>, Yunhui Guo*, Rogerio Feris, Liqiang Wang, Tajana Rosing (* Equal Contribution)<br><br>
-				<li>How Local is the Local Diversity? Reinforcing Sequential Determinantal Point Processes with Dynamic Ground Sets for Supervised Video Summarization  &emsp;<i><b>ECCV 2018</b></i><br>
+				<li>How Local is the Local Diversity? Reinforcing Sequential Determinantal Point Processes with Dynamic Ground Sets for Supervised Video Summarization<a target="_blank" href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Yandong_Li_How_Local_is_ECCV_2018_paper.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a>  &emsp;<i><b>ECCV 2018</b></i><br>
                                 <i><b>Yandong Li</b></i>, Liqiang Wang, Tianbao Yang, Boqing Gong.<br><br>
 					<!--
 					We study reinforcement model on sequential DPP for video sumarization and then apply the dynamic segments selection approach into reinforcing model. The model can solve the exposure problem existing in 
