--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			Center for Research in Computer Vision (CRCV)<br>
 			<i>lyndon.leeseu@outlook.com</i> <br>
 			<a href="https://scholar.google.com/citations?user=kRLb6PkAAAAJ&hl=en">Google Scholar</a>
-			<a href="https://cold-winter.github.io/CV_yandong.pdf">CV</a>
+			<a href="https://cold-winter.github.io/Resume_Yandong.pdf">CV</a>
 		 </div></div> 
 		 
 		 <a id="Education"></a>
