--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			Ph.D. in Computer Science, University of Central Florida (UCF)<br>
 			Center for Research in Computer Vision (CRCV)<br>
 			<i>lyndon.leeseu@outlook.com</i> <br>
-			<a href="https://scholar.google.com/citations?user=kRLb6PkAAAAJ&hl=en">Google Scholar</a>
+			<a href="https://scholar.google.com/citations?user=kRLb6PkAAAAJ&hl=en">Google Scholar</a><br>
 			<a href="https://cold-winter.github.io/Resume_Yandong.pdf">CV</a>
 		 </div></div> 
 		 
