--- a/index.html
+++ b/index.html
@@ -953,6 +953,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		      		<li><a href="#Experiences">Experiences</a></li>
 		      		<li><a href="#Publications">Publications</a></li> 
 				<li><a href="#Awards">Awards</a></li>
+		     		<li><a href="#Service">Service</a></li>
                 		               
               </ul>
             </div>
