--- a/index.html
+++ b/index.html
@@ -1054,11 +1054,11 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<ul>
 				<li><b>[CVPR 2020 Oral]</b> &emsp;Neural Networks Are More Data-Efficient Teachers Than Human Raters: Active Mixup for Knowledge Distillation from a Blackbox Teacher Model<br>
 				<i><b>Yandong Li*</b></i>, Dongdong Wang*, Liqiang Wang, Boqing Gong (* Equal Contribution)<br><br>
-				<li><b>[CVPR 2020]</b> &emsp;BachGAN: High-Resolution Image Synthesis from Salient Object Layout<br>
+				<li><b>[CVPR 2020]</b> &emsp;BachGAN: High-Resolution Image Synthesis from Salient Object Layout <a target="_blank" href="https://arxiv.org/pdf/2003.11690.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
 				<i><b>Yandong Li</b></i>, Yu Cheng, Zhe Gan, Licheng Yu, Liqiang Wang, Jingjing Liu<br><br>
 				<li><b>[WSDM 2020]</b> &emsp;Robust Graph Neural Network against Poisoning Attacks via Transfer Learning <a target="_blank" href="https://arxiv.org/pdf/1908.07558.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
 				Xianfeng Tang, <i><b>Yandong Li</b></i>, Yiwei Sun, Huaxiu Yao, Prasenjit Mitra, Suhang Wang<br><br>
-				<li><b>[AAAI 2020]</b> &emsp;AdaFilter: Adaptive Filter Fine-tuning for Deep Transfer Learning <a target="_blank" href="https://arxiv.org/pdf/1911.09659.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a>  <br>
+				<li><b>[AAAI 2020]</b> &emsp;AdaFilter: Adaptive Filter Fine-tuning for Deep Transfer Learning <a target="_blank" href="https://arxiv.org/pdf/1911.09659.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
 				Yunhui Guo, <i><b>Yandong Li</b></i>, Liqiang Wang, Tajana Rosing <br><br>
 				<li><b>[ICML 2019]</b> &emsp;NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-BoxAttack on Deep Neural Networks <a target="_blank" href="https://arxiv.org/pdf/1905.00441.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a> <br>
 				<i><b>Yandong Li*</b></i>, Lijun Li*, Liqiang Wang, Tong Zhang, Boqing Gong (* Equal Contribution)<br><br>
