--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 <div class="span">
 				<h4>Publications</h4>
 				<ul>
-				<li><b>[CVPR 2020 Oral]</b> &emsp;Neural Networks Are More Data-Efficient Teachers Than Human Raters: Active Mixup for Knowledge Distillation from a Blackbox Teacher Model<br>
+				<li><b>[CVPR 2020 Oral]</b> &emsp;Neural Networks Are More Data-Efficient Teachers Than Human Raters: Active Mixup for Knowledge Distillation from a Blackbox Teacher Model <a target="_blank" href="https://arxiv.org/abs/2003.13960"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
 				<i><b>Yandong Li*</b></i>, Dongdong Wang*, Liqiang Wang, Boqing Gong (* Equal Contribution)<br><br>
 				<li><b>[CVPR 2020]</b> &emsp;BachGAN: High-Resolution Image Synthesis from Salient Object Layout <a target="_blank" href="https://arxiv.org/pdf/2003.11690.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
 				<i><b>Yandong Li</b></i>, Yu Cheng, Zhe Gan, Licheng Yu, Liqiang Wang, Jingjing Liu<br><br>
