--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<h4>Publications</h4>
 				<ul>
 				<li><b>[ECCV 2020]</b> &emsp;Improving Object Detection with Selective Self-supervised Self-training <a target="_blank" href="https://arxiv.org/abs/2007.09162"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
-				<i><b>Yandong Li*</b></i>, Di Huang, Danfeng Qin, Liqiang Wang, Boqing Gong<br><br>
+				<i><b>Yandong Li</b></i>, Di Huang, Danfeng Qin, Liqiang Wang, Boqing Gong<br><br>
 				<li><b>[CVPR 2020 Oral]</b> &emsp;Neural Networks Are More Data-Efficient Teachers Than Human Raters: Active Mixup for Knowledge Distillation from a Blackbox Teacher Model <a target="_blank" href="https://arxiv.org/abs/2003.13960"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
 				<i><b>Yandong Li*</b></i>, Dongdong Wang*, Liqiang Wang, Boqing Gong (* Equal Contribution)<br><br>
 				<li><b>[CVPR 2020]</b> &emsp;BachGAN: High-Resolution Image Synthesis from Salient Object Layout <a target="_blank" href="https://arxiv.org/pdf/2003.11690.pdf"><img border="0" src="assets/pdf.bmp" align="top"></a><br>
