--- a/index.html
+++ b/index.html
@@ -971,8 +971,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			</a>
 			<div class="media-body">			
 			<h4>Yandong Li &ensp;(李延东)</h4>
-			Ph.D. in Computer Science, University of Central Florida (UCF)<br>
-			Center for Research in Computer Vision (CRCV)<br>
+			Software Engineer, Google<br>
 			<i>lyndon.leeseu@outlook.com</i> <br>
 			<a href="https://scholar.google.com/citations?user=kRLb6PkAAAAJ&hl=en">Google Scholar</a> / <a href="https://github.com/Cold-Winter">Github</a> / <a href="https://www.linkedin.com/in/yandong-li-614577110/">LinkedIn</a><br>
 			<a href="https://cold-winter.github.io/Resume_Yandong.pdf">CV</a>
@@ -985,7 +984,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				<h4>Education</h4>
 				<ul>
 				<li>
-				<h5><i>2017.08 - present</i></h5>
+				<h5><i>2017.08 - 2021.05</i></h5>
 				Ph.D. in Computer Science, University of Central Florida (UCF), Orlando, USA<br>
 				advised by <a href="http://www.cs.ucf.edu/~lwang/">Prof. Liqiang Wang</a> at UCF and <a href="http://boqinggong.info/index.html">Dr. Boqing Gong</a> (remote) at Google Research. 
 				</li>
@@ -1006,7 +1005,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 <div class="row">	
 		 <div class="span">
 				<h4>Experiences</h4>
-			 	I am a third-year Ph.D. student at UCF. My primary research areas include machine learning and computer vision. 
+			 	I am a software engineer/researcher at Google. My primary research areas include machine learning and computer vision. 
 				My recent works mainly investigate object detection, the distributions of adversarial examples for deep neural 
 			 	networks, multi-task learning, visual question answering and segmentation, action recognition, and video summarization.
 				<ul>
@@ -1018,7 +1017,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 				</li>
 				-->
 				<li>
-				<b>Google Research &emsp; Seattle, USA &emsp;<i>2020.01 - present</i></b><br>
+				<b>Google Research &emsp; Seattle, USA &emsp;<i>2020.01 - 2020.11</i></b><br>
 				Self-supervised learning
 				</li>		
 				<li>
