--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 			</a>
 			<div class="media-body">			
 			<h4>Yandong Li &ensp;(李延东)</h4>
-			Software Engineer, Google<br>
+			Google<br>
 			<i>lyndon.leeseu@outlook.com</i> <br>
 			<a href="https://scholar.google.com/citations?user=kRLb6PkAAAAJ&hl=en">Google Scholar</a> / <a href="https://github.com/Cold-Winter">Github</a> / <a href="https://www.linkedin.com/in/yandong-li-614577110/">LinkedIn</a><br>
 			<a href="https://cold-winter.github.io/Resume_Yandong.pdf">CV</a>
@@ -1005,7 +1005,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 		 <div class="row">	
 		 <div class="span">
 				<h4>Experiences</h4>
-			 	I am a software engineer/researcher at Google. My primary research areas include machine learning and computer vision. 
+			 	I am an engineer/researcher at Google. My primary research areas include machine learning and computer vision. 
 				My recent works mainly investigate object detection, the distributions of adversarial examples for deep neural 
 			 	networks, multi-task learning, visual question answering and segmentation, action recognition, and video summarization.
 				<ul>
